M       cat_batch_vbm.m
M       cat_conf_long.m
M       cat_conf_tools.m
M       cat_io_FreeSurfer.m
M       cat_io_cprintf.m
M       cat_main.m
M       cat_run_job.m
M       cat_stat_TIV.m
M       cat_stat_check_cov.m
M       cat_stat_showslice_all.m
M       cat_stat_spm.m
M       cat_stat_spmF2x.m
M       cat_stat_spmT2x.m
M       cat_surf_createCS.m
M       cat_surf_render.m
M       cat_surf_resamp.m
M       cat_surf_resamp_freesurfer.m
M       cat_vol_slice_overlay.m
M       cat_vol_slice_overlay_ui.m
M       html/cat.html

Used code analyzer to remove many unused variables and corrected code
according to suggestions.

------------------------------------------------------------------------
r786 | gaser | 2015-11-26 14:38:40 +0100 (Do, 26 Nov 2015) | 15 lines

Changed paths:
M       CHANGES.txt
M       cat_defaults.m
M       cat_stat_check_cov.m
M       html/cat_starting.html
M       tbx_cfg_cat.m
M       templates_1.50mm/hammers.xml
A       templates_1.50mm/lpba40.nii
A       templates_1.50mm/lpba40.txt
A       templates_1.50mm/lpba40.xml
M       templates_1.50mm/mori.xml
M       templates_1.50mm/neuromorphometrics.xml

Changed default modulation and updated help and html text accordingly.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat12.m
M       cat_main.m
M       cat_run.m
M       cat_run_newcatch.m
M       cat_stat_marks.m
M       cat_tst_qa.m
M       spm_cat12.m
M       tbx_cfg_cat.m
M       templates_animals/cat_defaults_ape_greater.m
M       templates_animals/cat_defaults_ape_lesser.m
M       templates_animals/cat_defaults_monkey_newworld.m
M       templates_animals/cat_defaults_monkey_oldworld.m

(1)  Fixed:   XML output in error case.
(2)  Changed: Renamed of XML structure and removed unnecessary variables.
(3)  Changed: Update parameter in primate cat_defaults. 

------------------------------------------------------------------------
r787 | dahnke | 2015-11-26 16:15:10